# MangaLibrary

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  sqlqueries.py  webscraper.py
src/MangaLibrary/: database_functions.py  database_setup.py  main.py  manga_data_fetcher.py  manga_series.py  sqlqueries.py  webscraper.py
tests/: test_MangaSeries.py  test_database_functions.py  test_manga_data_fetcher.py  test_manga_series.py
todo/: brainstorm.txt
