[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MangaLibrary"
version = "0.1.0"
description = "A manga library for organizing and recording physical manga for multiple users."
authors = ["Lurk390 <elbasiouny.mahmoud@gmail.com>"]
readme = "README.md"
packages = [{include = "MangaLibrary", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
AnilistPython = "==0.1.3"
beautifulsoup4 = "==4.12.2"
requests = "==2.31.0"
python-dotenv = "==1.0.0"

[tool.poetry.scripts]
MangaLibrary = "src.MangaLibrary.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
